[gd_scene load_steps=2 format=3 uid="uid://b5m3x4q5l2a"]

[ext_resource type="Script" path="res://MVP/View/HexMapView.gd" id="1"]

[node name="HexMapView" type="Node2D"]
script = ExtResource("1")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -200.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="TurnLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 40.0
text = "回合: 1"

[node name="StatusLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 70.0
text = "狀態: 可以操作"

[node name="ReadyButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 180.0
offset_bottom = 130.0
text = "結束回合 (Ready)"
